# odin

./: .gitignore  AGENTS.md  Cargo.toml  config.json  ingest  query
backend/: Cargo.toml
backend/src/: error.rs  errors.rs  main.rs  type.rs  types.rs
backend/src/controllers/: bookmarks.rs  healthz.rs  ingest.rs  mod.rs  search.rs
backend/src/routes/: bookmarks.rs  ingest.rs  mod.rs
backend/src/services/: auth.rs  bookmarks.rs  ingest.rs  mod.rs  search.rs
cli/: Cargo.toml
cli/src/: main.rs
frontend/: index.html  package.json
frontend/src/: App.tsx  main.tsx
src/: main.rs
src/routes/: mod.rs  search.rs
